 Changelog:
 ==========

 * (trunk) -- Version 1.4
    - Configuration variable '$egArrayExtensionCompatbilityMode' for deactivating the following newly
      introduced breaking changes:
      + '#arrayreset' now uses n parameters instead of ',' as separator for n arrays to reset
      + '#arraysearch' returns an empty string '' instead of '-1' in case nothing was found.
    - '#arraysearch' will only expand 'yes' or 'no' if given, but never both.
    - negative indexes for '#arrayindex', '#arraysearch' and '#arraysearcharray' are possible now.
    - bugfix in '#arraysearcharray', index and limit working fine now.
    - arrayprint will handle <includeonly>/<noinclude> correct in case it's used in a template.
    - Internationalization for several languages added.	
    - moved into mediawiki.org svn repository.
    
    @ToDo before release:
    - As in Variables 2.0, one store per Parser should be used.
    - ''#arraysearch'' should not expand both, 'yes' and 'no', just the one actual case.
    - Further breaking changes fixing weird old behavior and functionality


 * January 24, 2011 -- Version 1.3.2
    - New public class methods for creating and removing arrays. Good for use by other extensions.
    - VERSION constant added to ArrayExtension class 

 * July 20, 2010 -- Version 1.3.1
    - Removed critical bug. Some kind of "Superglobal" Arrays on page imports and job queue jobs.
      Values were passed from one page to another page. 

 * July 5, 2010 -- Version 1.3
    - update arrayunion and arraydiff, fixed heavy bug (gaps between array indexes doing some serious
      trouble in other arrayfunctions like arraysearch)
    - array function ''#arraysearcharray'' added
    - '#arraysearch' code cleanup, search parameter is optional now, searching for empty elements is
      possible now
    - advanced check for regular expressions in '#arraysearch,' '#arraydefine' and '#arraysearcharray'
      Pivate function isValidRegEx() added